# PCB-Bot

./: .gitignore  README.md
docs/: kicad-cli-macos-drc-fallback-2026-07-21.md  routing-and-visual-review-2026-07-20.md
docs/superpowers/plans/: 2026-07-16-24v-stepper-power-board.md  2026-07-20-pcb-skill-toolchain-repo.md
docs/superpowers/reports/: 2026-07-20-pcb-spice-simulation.md
docs/superpowers/specs/: 2026-07-16-pcb-skill-routing-design.md  2026-07-20-pcbflow-orchestrator-design.md
skills/circuit-synth/: SKILL.md
skills/circuit-synth/agents/: openai.yaml
skills/circuit-synth/references/: circuit-synth-api.md  generation-checklist.md
skills/kicad-happy/: SKILL.md
skills/kicad-happy/agents/: openai.yaml
skills/kicad-happy/references/: review-gates.md
skills/pcb/: SKILL.md
skills/pcb/agents/: openai.yaml
skills/pcb/references/: autorouting.md  toolchain-installation.md
skills/pcb/scripts/: check_toolchain.py
skills/spice/agents/: openai.yaml
skills/spice/scripts/: simulate_subcircuits.py  spice_results.py  spice_tolerance.py
tools/pcbflow/: pyproject.toml
tools/pcbflow/pcbflow/: README.md  __init__.py  cli.py  core.py  gui_drc.py  visual.py
tools/pcbflow/tests/: test_pcbflow.py
